--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -33,7 +33,7 @@
     min-height: unset;
     align-items: center;
     justify-content: flex-end;
-    padding: 0 60px;
+    padding: 10px 30px;
     margin: 0 auto;
     background-color: transparent;
 }
