--- a/css/global.css
+++ b/css/global.css
@@ -166,6 +166,19 @@ img {
     gap: 10px;
 }
 
+.overlay {
+    background: var(--overlay);
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+}
+
 /* CONTACT */
 .section.contact {
     background-color: var(--light-grey);
