--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -33,7 +33,7 @@
     min-height: unset;
     align-items: center;
     justify-content: flex-end;
-    padding: 10px 30px;
+    padding: 15px 30px;
     margin: 0 auto;
     background-color: transparent;
 }
@@ -113,12 +113,13 @@
 .footer {
     min-height: unset;
     color: var(--white);
-    background-color: var(--background);
+    background-color: var(--primary);
 }
 
 .footer .row {
     min-height: unset;
     justify-content: space-between;
+    margin: 30px auto;
 }
 
 @media (max-width: 560px) {
