--- a/home/css/slider.css
+++ b/home/css/slider.css
@@ -24,20 +24,31 @@
     margin: 0 10px;
 }
 
-.gallery .slider-nav {
-   background: rgb(245 24 24);
-   border: none;
-   outline: none;
-   color: #fff;
-   font-size: 20px;
-   margin-top: 20px;
-   padding: 6px 12px;
-   cursor: pointer;
-   position: absolute;
-   left: 50%;
-   transform: translate(-50%);
+.slider-container .item:nth-child(1) {
+    margin-left: -60px;
 }
 
-.gallery .slider-nav:nth-child(2) {
-   margin-left: -74px;
+.gallery .btn-wrapper {
+    display: flex;
+    gap: 20px;
+}
+
+.gallery img {
+    height: 100%;
+}
+
+.gallery .slider-nav {
+    color: var(--white);
+    cursor: pointer;
+}
+
+.gallery .slider-nav i {
+    font-size: 50px;
+    opacity: 0.7;
+    transition: var(--transition);
+}
+
+.gallery .slider-nav i:hover {
+    opacity: 1;
+    transition: var(--transition);
 }
