--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -113,7 +113,7 @@
 .footer {
     min-height: unset;
     color: var(--white);
-    background-color: var(--primary);
+    background-color: var(--black);
 }
 
 .footer .row {
