--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -33,7 +33,7 @@
     min-height: unset;
     align-items: center;
     justify-content: flex-end;
-    padding: 15px 30px;
+    padding: 10px 30px;
     margin: 0 auto;
     background-color: transparent;
 }
@@ -53,7 +53,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 40px;
 }
 
 .header .container .nav {
@@ -102,6 +102,10 @@
 
 .header.active .nav::before {
     background-color: var(--black);
+}
+
+.header.active .row {
+    padding: 0 30px;
 }
   
 .header .nav:hover::before {
