--- a/home/css/style.css
+++ b/home/css/style.css
@@ -33,6 +33,7 @@
 }
 
 .contact.section .wrapper {
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -50,6 +51,12 @@
     text-align: center;
 }
 
+.contact.section .wrapper h3,
+.contact.section .wrapper a,
+.contact.section .wrapper p {
+    z-index: 10;
+}
+
 .contact.section .wrapper a {
     font-weight: 700;
     font-size: 14px;
@@ -61,9 +68,11 @@
 
 .gallery.section {
     background-color: var(--primary);
+    height: 70vh;
 }
 
 .gallery.section .row {
+    height: 70vh;
     gap: 20px;
     padding: 0;
 }
