--- a/home/css/style.css
+++ b/home/css/style.css
@@ -86,6 +86,15 @@
 }
 
 @media (max-width: 560px) {
+    .banner.section,
+    .banner.section .row {
+        height: fit-content;
+    }
+    
+    .banner.section .row {
+        padding-top: 80px;
+    }
+
     .banner.section h1, 
     .banner.section p {
         width: 100%;
@@ -93,5 +102,9 @@
 
     .banner.section h1 {
         font-size: 36px;
+    }
+
+    .contact.section .wrapper a {
+        font-size: 10px;
     }
 }
