--- a/home/css/slider.css
+++ b/home/css/slider.css
@@ -7,14 +7,18 @@
 
 .slider-container .slider-width {
     height: 50vh;
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: start;
-    justify-content: start;
+    justify-content: center;
     gap: 40px;
     left: 0;
     top: 0;
-    transition: 0.4s ease-in-out;
+    transition: left 0.5s ease-in-out;
+}
+
+.slider-width.last-slide {
+    transition: none;
 }
 
 .slider-container img:nth-child(1) {
@@ -28,6 +32,7 @@
 
 .gallery img {
     height: 100%;
+    object-fit: cover;
 }
 
 .gallery .slider-nav {
