--- a/home/css/style.css
+++ b/home/css/style.css
@@ -32,6 +32,12 @@
     flex: 2 0;
 }
 
+.btn-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 10px;
+}
+
 .contact.section .wrapper {
     position: relative;
     flex-direction: column;
